--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "luxon": "^1.16.0",
+    "moment": "^2.24.0",
     "prettier": "^1.19.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
